--- a/index_flask_qr/templates/user/logout.html
+++ b/index_flask_qr/templates/user/logout.html
@@ -3,10 +3,10 @@
 {%- block body %}
 
 <p>
-Welcome {{ name }}!<br />
+Welcome, <i><b>{{ name }}</b></i>!<br />
 Do you wish to log out?<br />
 </p>
 
-<a href="?confirm=yes&next={{ next }}">Logout</a>
+<a href="{{ url_for('user_logout') }}?next={{ next }}">Logout</a>
 
 {%- endblock %}
