--- a/index_flask_qr/templates/views/views_debug/index.html
+++ b/index_flask_qr/templates/views/views_debug/index.html
@@ -6,10 +6,10 @@
 
 <table border="1">
   <tr>
-    <th>Url</th>
+    <th>Url (rule)</th>
     <th>Args</th>
     <th>Methods</th>
-    <th>Function</th>
+    <th>Endpoint</th>
     <th>Module</th>
   </tr>
   {%- for url, args, methods, endpoint, loc in urls %}
