--- a/index_flask_qr/templates/_layout_vue.html
+++ b/index_flask_qr/templates/_layout_vue.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="python flask">
   <meta name="description" content="index">
   <meta name="author" content="">
-  <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="favicon.ico">
 
   {%- if title %}
   <title>{{ title }}</title>
